<resources>
    <string name="app_name" translatable="false">BikeTrack</string>
    <string name="facebook_app_id" translatable="false">580553822151900</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb580553822151900</string>
    <string name="google_android_map_api_key" translatable="false">AIzaSyCWaWLfc9VShCwMhz1yj689mxZc5sL57dk</string>
    <string name="title_bikes">Bikes</string>
    <string name="title_bike">Bike</string>
    <string name="title_bike_edit">Bike</string>
    <string name="title_bike_new">New Bike</string>
    <string name="title_brand">Select a brand</string>
    <string name="title_profile_edit">Edit your profile</string>
    <string name="title_profile">Profile</string>
    <string name="title_subscribe">Sign up</string>
    <string name="title_login">Sign in</string>
    <string name="title_settings">Settings</string>
    <string name="title_language">Language</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid address</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">Required</string>
    <string name="action_subscribe">Sign up</string>
    <string name="action_subscribe_short">Sign up</string>
    <string name="error_check_password_and_repeat">The two passwords must be the same </string>
    <string name="error_check_password_secure">The password must be 6 chars long</string>
    <string name="error_check_email">Invalid email</string>
    <string name="error_subscribe_fields">At least one of this fields is invalid</string>
    <string name="empty_list">There is no bike here !</string>
    <string name="percent_battery">%</string>
    <string name="title_bikes_list">Bikes list</string>
    <string name="bike_name_txt">Name</string>
    <string name="bike_brand_txt">Brand</string>
    <string name="bike_tracker_txt">Tracker ID</string>
    <string name="bike_serial_txt">Serial Number</string>
    <string name="bike_save_button_txt">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_context_menu">Bike option</string>
    <string name="edit_context_menu">Edit</string>
    <string name="delete_context_menu">Delete</string>
    <string name="alert_confirmation_delete_title">Do you want to delete this bike ?</string>
    <string name="alert_confirmation_delete_message">Deletion is permanent.</string>
    <string name="alert_confirmation_delete_yes">Confirm</string>
    <string name="alert_confirmation_delete_no">Cancel</string>
    <string name="title_activity_auto_login">AutoLogin</string>
    <string name="profile_email_txt">Email</string>
    <string name="profile_lastname_txt">Last name</string>
    <string name="profile_firstname_txt">First name</string>
    <string name="profile_dob_txt">Date of birth</string>
    <string name="menu_text_settings">Settings</string>
    <string name="menu_text_bikes">Bikes</string>
    <string name="menu_text_profile">Profile</string>
    <string name="alert_confirmation_brand_title">Do you want to select this brand ?</string>
    <string name="alert_confirmation_brand_yes">Confirm</string>
    <string name="alert_confirmation_brand_no">Cancel</string>
    <string name="alert_confirmation_delete_account_title">Delete your account ?</string>
    <string name="alert_confirmation_delete_account_message">Deletion is permanent.</string>
    <string name="alert_confirmation_delete_account_yes">Confirm</string>
    <string name="alert_confirmation_delete_account_no">Cancel</string>
    <string name="log_off_button_txt">Sign out</string>
    <string name="delete_account_button_txt">Delete your account</string>
    <string name="save_account_button_txt">Save</string>
    <string name="button_open_language_txt">Languages</string>
    <string name="button_language_clear_txt">Reset Language</string>
    <string name="bike_error_name_or_brand_empty">Name cannot be empty</string>
    <string name="bike_error_trackerid_empty">Tracker cannot be empty</string>
    <string name="user_error_lastname_empty">Lastname cannot be empty</string>
    <string name="user_error_firstname_empty">Firstname cannot be empty</string>
    <string name="user_saved">Account saved</string>
    <string name="user_already_created">This address is already used.</string>
    <string name="network_error">Outch! There is a problem.</string>
    <string name="user_unauthorized">Connection unauthorized. Verify your email and password.</string>
    <string name="user_not_found">You are not in our database, you should create an account</string>
    <string name="bike_created">Your bike is now created</string>
    <string name="bike_updated">Your bike is updated</string>
    <string name="bike_deleted">Your bike is now deleted</string>
    <string-array name="language_arrays">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="tab_text_1">Account</string>
    <string name="tab_text_2">Emergency Contact</string>
    <string name="tab_text_3">Settings</string>
    <string name="rememberme">Remember me</string>
</resources>