<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24px"
        android:title="@string/menu_text_settings"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_bikes"
        android:enabled="true"
        android:icon="@drawable/ic_directions_bike_white_24px"
        android:title="@string/menu_text_bikes"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24px"
        android:title="@string/menu_text_profile"
        app:showAsAction="ifRoom|withText" />
</menu>