<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="eu.biketrack.android.settings.profile_tab.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email_txt"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textColor="@color/titles"/>

    <TextView
        android:id="@+id/profile_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/interact_background"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_lastname_txt"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textColor="@color/titles"/>

    <TextView
        android:id="@+id/profile_lastname_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/interact_background"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_firstname_txt"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textColor="@color/titles"/>

    <TextView
        android:id="@+id/profile_firstname_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/interact_background"
        android:textSize="20sp" />

    <Button
        android:id="@+id/log_off_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_off_button_txt"
        android:background="@color/interact_background"
        android:textColor="@color/inside" />
</LinearLayout>

