<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subscribtion_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="eu.biketrack.android.subscription.Subscription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_bike_list_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/subscribtion_email_textview"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/signupheader" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/biketrack_logo" />

        <EditText
            android:id="@+id/subscribtion_email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/subscribtion_password_textview"
            android:layout_alignEnd="@+id/subscribtion_subscribe_button"
            android:layout_alignLeft="@+id/subscribtion_subscribe_button"
            android:layout_alignRight="@+id/subscribtion_subscribe_button"
            android:layout_alignStart="@+id/subscribtion_subscribe_button"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/subscribtion_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/subscribtion_password_textview_repeat"
            android:layout_alignEnd="@+id/subscribtion_subscribe_button"
            android:layout_alignLeft="@+id/subscribtion_subscribe_button"
            android:layout_alignRight="@+id/subscribtion_subscribe_button"
            android:layout_alignStart="@+id/subscribtion_subscribe_button"
            android:hint="@string/prompt_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/subscribtion_password_textview_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/subscribtion_subscribe_button"
            android:layout_alignEnd="@+id/subscribtion_subscribe_button"
            android:layout_alignLeft="@+id/subscribtion_subscribe_button"
            android:layout_alignRight="@+id/subscribtion_subscribe_button"
            android:layout_alignStart="@+id/subscribtion_subscribe_button"
            android:layout_marginBottom="13dp"
            android:hint="@string/prompt_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/subscribtion_subscribe_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/subscribtion_login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/inside"
            android:text="@string/action_subscribe"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Button
            android:id="@+id/subscribtion_login_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/background"
            android:shadowColor="@color/background"
            android:text="@string/action_sign_in"
            android:textColor="@color/inside"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/subscribtion_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/subscribtion_login_button"
            android:layout_alignBottom="@+id/subscribtion_login_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/rememberme" />

        <ProgressBar
            android:id="@+id/subscribtion_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
